k8s/master.service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: kubernetes-poc-nodeport
spec:
  selector:    
    app: kubernetes-poc
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30036
    protocol: TCP
