k8s/staging.service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: kubernetes-poc-nodeport
  namespace: kubernetes-poc-staging
spec:
  selector:    
    app: kubernetes-poc
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30037
    protocol: TCP
